<!--
  ~ Created by omrobbie.
  ~ Copyright (c) 2018. All rights reserved.
  ~ Last modified 11/16/17 5:18 AM.
  -->

<resources>
    <string name="app_name">Catalogue Movie Ui Ux</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>

    <string name="err_load_failed">Failed to load data.\nPlease check your Internet connections!</string>

    <string name="key_reminder_daily">reminder_daily</string>
    <string name="key_reminder_upcoming">reminder_upcoming</string>
    <string name="key_setting_locale">setting_locale</string>

    <string name="label_now_playing">Now Playing</string>
    <string name="label_upcoming">Upcoming</string>
    <string name="label_favorite">Favorite</string>

    <string name="label_release_date">Release Date</string>
    <string name="label_vote">Vote Average:</string>
    <string name="label_genres">Movie Genres</string>
    <string name="label_overview">Overview</string>
    <string name="label_production_details">Production Details</string>
    <string name="label_belongs">Belongs To Collection</string>
    <string name="label_budget">Budget</string>
    <string name="label_revenue">Revenue</string>
    <string name="label_companies">Companies</string>
    <string name="label_countries">Countries</string>

    <string name="label_detail">Detail</string>
    <string name="label_share">Share</string>

    <string name="label_communicate">Communicate</string>
    <string name="label_search">search by movie title</string>

    <string name="label_daily_reminder">Daily Reminder Notification is now</string>
    <string name="label_upcoming_reminder">Upcoming Reminder Notification is now</string>
    <string name="label_activated">activated!</string>
    <string name="label_deactivated">deactivated!</string>

    <string name="label_daily_reminder_title">Daily Reminder Notification</string>
    <string name="label_daily_reminder_summary">Turn on/off daily reminder</string>

    <string name="label_upcoming_reminder_title">Upcoming Reminder Notification</string>
    <string name="label_upcoming_reminder_summary">Turn on/off upcoming reminder</string>

    <string name="label_setting_locale_title">Setting Locale</string>
    <string name="label_setting_locale_summary">Change your phone localization</string>

    <string name="label_alarm_daily_reminder">Good morning! Ready to pick your new movies today?</string>

    <string name="share_description">Download now! Get the greatest app to get yourself an updated movie information!</string>

    <string name="cv_save">You like this movie</string>
    <string name="cv_remove">This movie has been removed from favorite list!</string>

    <string name="appwidget_text">Favorite Movies</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">You dont have favorite movies yet</string>
</resources>
